# eliduprees-web-games

./: .gitignore  Cargo.toml  Web.toml
deck-of-unhealthy-defense-mechanisms/: Cargo.toml
deck-of-unhealthy-defense-mechanisms/src/: actions.rs  cards.rs  game.rs  geometry.rs  lib.rs  map.rs  mechanisms.rs  movers.rs  ui_glue.rs  utils.rs
eliduprees-web-games-lib/: Cargo.toml
eliduprees-web-games-lib/src/: lib.rs
media/: audiobuffer-to-wav.js
media/web-games/: deck-of-unhealthy-defense-mechanisms-init.js  deck-of-unhealthy-defense-mechanisms.css  leaflet.js  my-factory-has-a-trillion-machines-init.js  shared-init.js  shared.css  webfxr-init.js
my-factory-has-a-trillion-machines/: Cargo.toml
my-factory-has-a-trillion-machines-web-frontend/: Cargo.toml
my-factory-has-a-trillion-machines-web-frontend/src/: lib.rs
my-factory-has-a-trillion-machines/src/: flow_pattern.rs  geometry.rs  graph_algorithms.rs  lib.rs  machine_data.rs  main.rs  modules.rs  primitive_machines.rs  ui.rs  undo_history.rs  web_ui.rs
scripts/: webfxr-build-static.py
src/: lib.rs
static/: deck-of-unhealthy-defense-mechanisms.html  index.html  mimic-website.css  my-factory-has-a-trillion-machines.html  super_of_2.html  the_path.html  webfxr.html
static/media/font-awesome-4.6.3/css/: font-awesome.css  font-awesome.min.css
static/media/web-games/: my-factory-has-a-trillion-machines-init.js  my-factory-has-a-trillion-machines.css  shared-init.js  the-path-init.js  webfxr-init.js
static/media/web-games/factory-images/: Thumbs.db
super-of-2/: Cargo.toml
super-of-2/src/: draw.rs  main.rs  simulation.rs
the-path/: Cargo.toml
the-path/src/: main.rs  simulation.rs
webfxr/: Cargo.toml
webfxr/src/: data.rs  main.rs  randomization.rs  ui.rs
