[package]
name = "eliduprees-web-games"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]

[dependencies]
stdweb = "0.3"
serde = {version = "1", features = ["rc"]}
serde_derive = "1"
nalgebra = {version = "0.13", features = ["serde-serialize"]}
rand = "0.3"
derivative = "1.0"
ordered-float = "0.2"
boolinator = "2.4"
