[package]
name = "deck-of-unhealthy-defense-mechanisms"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
eliduprees-web-games-lib = { path = "../eliduprees-web-games-lib" }
wasm-bindgen = {version = "0.2.70", features = ["serde-serialize"]}
console_error_panic_hook = "0.1.6"
serde = {version = "1.0", features = ["derive","rc"]}
serde_json = "1.0"
nalgebra = {version = "0.27", features = ["serde-serialize"]}
live-prop-test = {git = "https://github.com/elidupree/live-prop-test", version = "0.1", features = ["wasm-bindgen"]}
extend = "0.3.0"
ordered-float = "2.5.1"
trait_enum = "0.5.0"
derivative = "2.2.0"
rand = "0.8.4"
guard = "0.5.1"
