[package]
name = "eliduprees-web-games-lib"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.70"
nalgebra = {version = "0.16", features = ["serde-serialize"]}
rand = "0.7"

[dependencies.web-sys]
version = "0.3.47"
features = [
    "Window",
    "Performance",
    "PerformanceTiming",
]
