[package]
name = "my-factory-has-a-trillion-machines"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
edition = "2018"

[dependencies]
eliduprees-web-games-lib = { path = "../eliduprees-web-games-lib" }
stdweb = "0.4"
serde = {version = "1", features = ["derive","rc"]}
serde_json = "1"
num = "0.2"
nalgebra = {version = "0.16", features = ["serde-serialize"]}
derivative = "1.0"
arrayvec = {version = "0.4.7", features = ["serde-1"]}
itertools = "0.7.3"
live-prop-test = {git = "https://github.com/elidupree/live-prop-test", version = "0.1", features = ["stdweb"]}
extend = "0.3.0"

[dev-dependencies]
proptest = "0.8.7"
